# pytest-doctest-import-mismatch

./: .pre-commit-config.yaml  README.rst  pyproject.toml
src/anndata/: __init__.py  _version.py  utils.py
src/anndata/_core/: aligned_mapping.py  anndata.py  index.py  merge.py  raw.py  views.py
src/anndata/compat/: __init__.py
src/anndata/tests/: conftest.py  helpers.py  test_annot.py  test_base.py  test_deprecations.py  test_hdf5_backing.py  test_helpers.py  test_inplace_subset.py  test_layers.py  test_obsmvarm.py  test_obspvarp.py  test_raw.py  test_structured_arrays.py  test_views.py  test_x.py
