[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'anndata'
version = '1.0'
description = 'pytest reproducer for doctest import behavior'
authors = [{ name = 'Philipp A.', email = 'flying-sheep@web.de' }]
readme = 'README.rst'
license = 'GPL-3.0-or-later'
requires-python = '>=3.11'
dependencies = [
    'pytest==7.4.4',
    'numpy',
    'pandas',
    'scipy',
    'joblib',
]

[tool.hatch.build]
exclude = [
    'src/pytest_doctest_import_mismatch/tests/test_*.py',
]

[tool.pytest.ini_options]
addopts = [
    '--import-mode=importlib',
    '--doctest-modules',
    '--pyargs',
]
testpaths = [
    'anndata', # module for --pyargs
    './src/anndata/tests', # path
]

[tool.hatch.envs.default]
dev-mode = false
